[package]
name = "num-primes"
version = "0.1.0"
authors = ["0xSilene"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
num-traits = "0.2.11"
rand = "0.5"
num-bigint = { version = "0.2", features = ["rand"] }