[package]
name = "num-primes"
version = "0.2.0"
authors = ["AtropineTears"]
edition = "2018"
description = "A Rust Library For Generating Large Prime and Composite Numbers using num with a simplistic interface."
keywords = ["random","primes","bigint","num","math"]
categories = ["cryptography", "science","algorithms"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/AtropineTears/num-primes"
repository = "https://github.com/AtropineTears/num-primes"

[badges]
travis-ci = { repository = "AtropineTears/num-primes", branch = "master" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num
num = { version = "0.4.0", default-features = false }
num-traits = "0.2.11"
num-bigint = { version = "0.2.6", features = ["rand"] }
# random
rand = "0.5.6"

# Logging
log = "0.4.14"
